[gd_scene load_steps=4 format=3 uid="uid://c7xebheuu6ryc"]

[ext_resource type="Script" path="res://scenes/ui/menus/comparison_menu/bodypart_container.gd" id="1_bryk7"]

[sub_resource type="LabelSettings" id="LabelSettings_uaibd"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_0yqfv"]
size = Vector2(60, 60)

[node name="BodypartContainer" type="PanelContainer"]
offset_right = 294.0
offset_bottom = 207.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_bryk7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "#current-label#"
label_settings = SubResource("LabelSettings_uaibd")
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_0yqfv")
stretch_mode = 2

[node name="StatLabelsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="EmptyLabel" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Empty"
horizontal_alignment = 1
vertical_alignment = 1
